# rolling_window

./: .Rbuildignore  .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  README.md  configure  configure.win
.github/workflows/: cpp_test.yml  docs.yml  python.yml  r_check.yml
R/: robustrolling-package.R  rolling_metrics.R
benchmarks/: bench_core.cxx  bench_python.py  bench_r.R
docs/: rd_to_rst.py  requirements.txt
docs/_static/: custom.css
docs/python/: api.rst  conf.py  index.rst  low_level.rst
docs/python/r_api/: index.rst  rolling_cor.rst  rolling_cov.rst  rolling_kurtosis.rst  rolling_max.rst  rolling_mean.rst  rolling_median.rst  rolling_min.rst  rolling_skewness.rst  rolling_variance.rst
include/: IMedianAlgorithm.hpp  MonotonicMax.hpp  MonotonicMin.hpp  MultisetMedian.hpp  RollingMetric.hpp  SlidingCovariance.hpp  SlidingMean.hpp  SlidingMedian.hpp  SlidingMoments.hpp  SlidingMomentsPrefix.hpp  SlidingWelford.hpp  SlidingWelfordRing.hpp
inst/include/: MonotonicMax.hpp  MultisetMedian.hpp  RollingMetric.hpp  SlidingWelford.hpp  SlidingWelfordRing.hpp
inst/tinytest/: test_rolling_covariance.R  test_rolling_max.R  test_rolling_median.R  test_rolling_min.R  test_rolling_moments.R  test_rolling_variance.R
man/: robustrolling-package.Rd  rolling_cor.Rd  rolling_cov.Rd  rolling_kurtosis.Rd  rolling_max.Rd  rolling_mean.Rd  rolling_median.Rd  rolling_min.Rd  rolling_skewness.Rd  rolling_variance.Rd
py_package/: CMakeLists.txt  README.md  py_wrapper.cpp  pyproject.toml
py_package/robustrolling/: __init__.py
py_package/tests/: test_bindings.py
src/: Makevars  Makevars.win  MonotonicMax.cxx  MultisetMedian.cxx  SlidingCovariance.cpp  SlidingMedian.cxx  SlidingWelford.cxx  SlidingWelfordRing.cxx  main.cxx  r_wrapper.cpp  symbols.rds
src_core/: MonotonicMax.cpp  MonotonicMin.cpp  MultisetMedian.cpp  SlidingMean.cpp  SlidingMoments.cpp  SlidingMomentsPrefix.cpp  SlidingWelford.cpp  SlidingWelfordRing.cpp
tests/: test_core.cxx  test_monotonic_max.cxx  test_monotonic_min.cxx  test_multiset_median.cxx  test_sliding_covariance.cxx  test_sliding_moments.cxx  test_sliding_welford.cxx  test_sliding_welford_ring.cxx  tinytest.R
