[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "robustrolling"
version = "0.1.0"
description = "High-performance rolling window metrics implemented in C++17"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Igor Ptak", email = "ptakigor2005@gmail.com"}
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pandas>=1.0",
]
pandas = [
  "pandas>=1.0",
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.expand-macos-universal-tags = true
wheel.packages = ["robustrolling"]